Donderdag 12/03 newGebruiker wegschrijven @ new line
- inlezen Nonogram
- inlezen scorenboard
- schrijven scorenboard
- controlle structuur

-----
Jules